Make sure background-color of body is white
On systems with a dark theme it is not guaranteed that the html/body
background-color is white. In that case the canvas will be distorted and
fail to remove old elements.

This enforces a white background color.

--- a/client/style.css
+++ b/client/style.css
@@ -3,6 +3,7 @@ body, html {
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	background-color: white;
 }
 
 #container {
